# ATLAS-AI

./: CHANGELOG.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  health.py  users.py
backend/app/core/: config.py  database.py  logging.py  redis.py  security.py
backend/app/middleware/: errors.py  logging.py  request_id.py  security.py
backend/app/models/: user.py
backend/app/repositories/: user.py
backend/app/schemas/: user.py
backend/app/services/: auth.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_users.py
backend/tests/: conftest.py  test_auth.py  test_health.py
frontend/: Dockerfile
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: Footer.tsx  Navbar.tsx
frontend/hooks/: useAuth.tsx
frontend/services/: api.ts
