[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "black>=26.5.1",
    "httpx>=0.28.1",
    "isort>=8.0.1",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = "."

